<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_weather_view">WeatherView</string>
    <string name="_0_f">0 °F</string>
    <string name="description">desc</string>
    <string name="wind">Wind:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="recommendation">Recommendation</string>
    <string name="air_quality">Air Quality</string>
    <string name="fire_alerts">Fire Alerts</string>
    <string name="todo">TODO</string>

    <string name="action_location">Location</string>
    <string name="action_display">Display Settings</string>
    <string name="action_about">About</string>

    <string name="location_button">Save New Zip</string>
    <string name="current_zip_label">Current Saved Zip: </string>
    <string name="new_zip_label">Enter Zip Code: </string>
    <string name="auto_fill_hints"> ##### </string>
    <string name="mr_hint">5 digits please</string>
    <string name="spinner_label">Icon Skin Pack: </string>
    <string name="switch_label">Dark Mode: </string>

    <string name = "about_part_1">This app was created as an extension of a class and not for any monetary purposes. All icons used within this pack were obtained from vectreezy.com, a source for royalty-free artwork.</string>
    <string name = "about_part_2">The following API\'s were used: </string>
    <string name = "about_part_3">This app was programmed by Anea Lucero, Anthony Montoya, Jeff Pfeifer, and Robert Anderson.</string>
</resources>
